--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
     "php": ">=8.2",
     "influxdata/influxdb-client-php": "^3.7",
     "symfony/process": "^7.2",
+    "symfony/dependency-injection": "^7.2",
+    "symfony/config": "^7.2",
+    "symfony/yaml": "^7.2",
     "psr/simple-cache": "^3.0",
     "psr/http-client": "^1.0",
     "psr/http-factory": "^1.0",
