Logger and Cache

--- a/config/packages/config.yaml
+++ b/config/packages/config.yaml
@@ -1,23 +1,28 @@
 # This file contains general configuration parameters for the application
 
-# Default driver to use when none is specified
-default_driver: 'influxdb'
+parameters:
+    # Default driver to use when none is specified
+    default_driver: 'influxdb'
 
-# Configuration for different drivers
-drivers:
-    influxdb:
-        url: 'http://localhost:8086'
-        token: ''
-        org: ''
-        bucket: 'default'
-        precision: 'ns'
+    # Configuration for different drivers
+    drivers:
+        influxdb:
+            url: 'http://localhost:8086'
+            token: ''
+            org: ''
+            bucket: 'default'
+            precision: 'ns'
 
-    prometheus:
-        url: 'http://localhost:9090'
+        prometheus:
+            url: 'http://localhost:9090'
 
-    # Add more driver configurations as needed
+        # Add more driver configurations as needed
 
-# Cache configuration
-cache:
-    enabled: true
-    ttl: 3600  # Time to live in seconds
+    # Cache configuration
+    cache:
+        enabled: true
+        ttl: 3600  # Time to live in seconds
+        driver: 'file'
+        prefix: 'tsdb_'
+        file:
+            directory: '%kernel.cache_dir%/cache'
