--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "psr/http-client": "^1.0",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
+    "psr/log": "^3.0",
     "php-http/discovery": "^1.19",
     "nyholm/psr7": "^1.8",
     "php-http/guzzle7-adapter": "^1.0"
