--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "phpunit/phpunit": "^9.5",
     "symfony/var-dumper": "^7.2",
     "laravel/pint": "^1.22",
-    "phpstan/phpstan-phpunit": "^2.0"
+    "phpstan/phpstan-phpunit": "^2.0",
+    "phpstan/phpstan-symfony": "^2.0"
   },
   "require": {
     "php": ">=8.2",
