--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
     "symfony/var-dumper": "^7.2",
     "laravel/pint": "^1.22",
     "phpstan/phpstan-phpunit": "^2.0",
-    "phpstan/phpstan-symfony": "^2.0"
+    "phpstan/phpstan-symfony": "^2.0",
+    "influxdata/influxdb-client-php": "^3.7",
+    "symfony/process": "^7.3"
   },
   "require": {
     "php": ">=8.2",
