--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "phpstan/phpstan-phpunit": "^2.0",
     "phpstan/phpstan-symfony": "^2.0",
     "influxdata/influxdb-client-php": "^3.7",
-    "symfony/process": "^7.3"
+    "symfony/process": "^7.3",
+    "rector/rector": "^2.0"
   },
   "require": {
     "php": ">=8.2",
@@ -44,6 +45,23 @@
     "php-http/discovery": "^1.19",
     "nyholm/psr7": "^1.8",
     "php-http/guzzle7-adapter": "^1.0"
+  },
+  "scripts": {
+    "docker:up": "docker compose -f docker/docker-compose.yml up -d",
+    "docker:down": "docker compose -f docker/docker-compose.yml down",
+    "style": "pint",
+    "rector": "rector",
+    "test:analyze": "phpstan analyse",
+    "test:style": "pint --test",
+    "test:rector": "rector --dry-run",
+    "test:unit": "phpunit",
+    "test:integration": "phpunit --group=integration",
+    "test": [
+      "@test:style",
+      "@test:analyze",
+      "@test:rector",
+      "@test:unit"
+    ]
   },
   "config": {
     "allow-plugins": {
