--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,12 @@
     "rector/rector": "^2.0",
     "symfony/runtime": "^7.3",
     "symfony/framework-bundle": "^7.3",
-    "symfony/console": "^7.3"
+    "symfony/console": "^7.3",
+    "illuminate/container": "^12.24",
+    "illuminate/config": "^12.24",
+    "illuminate/support": "^12.24",
+    "mockery/mockery": "^1.6",
+    "phpoption/phpoption": "^1.9"
   },
   "require": {
     "php": ">=8.2",
@@ -45,6 +50,7 @@
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
     "psr/log": "^3.0",
+    "psr/container": "^2.0",
     "php-http/discovery": "^1.19",
     "nyholm/psr7": "^1.8",
     "php-http/guzzle7-adapter": "^1.0"
@@ -76,6 +82,16 @@
     "allow-plugins": {
       "php-http/discovery": true,
       "symfony/runtime": true
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "TimeSeriesPhp\\Laravel\\TimeSeriesServiceProvider"
+      ],
+      "aliases": {
+        "TSDB": "TimeSeriesPhp\\Laravel\\Facades\\TSDB"
+      }
     }
   }
 }
