Some registration changes

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -49,6 +49,7 @@ services:
         public: true
 
     Symfony\Component\DependencyInjection\ContainerInterface: '@service_container'
+    Psr\Container\ContainerInterface: '@service_container'
     Namespace\ImportService:
         arguments:
             - '@service_container'
