--- a/packages/rrd-driver/composer.json
+++ b/packages/rrd-driver/composer.json
@@ -7,5 +7,10 @@
         "psr-4": {
             "\\TimeseriesPhp\\Driver\\RRD\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
