--- a/packages/core/composer.json
+++ b/packages/core/composer.json
@@ -7,5 +7,10 @@
     "psr-4": {
       "\\TimeseriesPhp\\Core\\": "src"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
   }
 }
