--- a/packages/laravel-bridge/composer.json
+++ b/packages/laravel-bridge/composer.json
@@ -1,7 +1,9 @@
 {
   "name": "timeseries-php/laravel-bridge",
   "require": {
-    "php": "^8.3"
+    "php": "^8.3",
+    "illuminate/contracts": "^11.0||^12.0",
+    "illuminate/support": "^11.0||^12.0"
   },
   "autoload": {
     "psr-4": {
@@ -11,6 +13,16 @@
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "TimeseriesPhp\\Bridge\\Laravel\\ServiceProvider"
+      ],
+      "aliases": {
+        "TSDB": "TimeseriesPhp\\Bridge\\Laravel\\Facade"
+      }
     }
   }
 }
