--- a/packages/null-driver/composer.json
+++ b/packages/null-driver/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "timeseries-php/null-driver",
+  "type": "timeseries-php-driver",
   "require": {
     "php": "^8.3"
   },
@@ -11,6 +12,11 @@
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "timeseries-php": {
+      "driver-class": "\\TimeseriesPhp\\Driver\\Null\\NullDriver"
     }
   }
 }
