--- a/packages/web/composer.json
+++ b/packages/web/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.9.0",
         "livewire/volt": "^1.7.0",
+        "timeseries-php/influxdb2-driver": "dev-main",
         "timeseries-php/laravel": "*"
     },
     "require-dev": {
