Fix in/out ans scale. better ranges etc.

--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,7 @@
                 "TSDB": "TimeseriesPhp\\Bridge\\Laravel\\Facade"
             },
             "providers": [
-              "TsdbServiceProvider"
+                "TimeseriesPhp\\Bridge\\Laravel\\TsdbServiceProvider"
             ]
         },
         "timeseries-php": {
