--- a/packages/core/composer.json
+++ b/packages/core/composer.json
@@ -2,7 +2,8 @@
   "name": "timeseries-php/core",
   "require": {
     "php": "^8.3",
-    "composer-runtime-api": "^2.0"
+    "composer-runtime-api": "^2.0",
+    "psr/log": "^3.0"
   },
   "autoload": {
     "psr-4": {
