--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "psr-discovery/http-client-implementations": "^1.0",
         "psr-discovery/http-factory-implementations": "^1.0",
         "psr/http-client": "^1.0",
-        "psr/log": "^3.0"
+        "psr/log": "^3.0",
+        "symfony/process": "^7.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
