--- a/packages/web/composer.json
+++ b/packages/web/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "timeseries-php/influxdb2-driver": "dev-main",
-        "timeseries-php/laravel": "*"
+        "timeseries-php/laravel": "*",
+        "timeseries-php/rrd-driver": "dev-main"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
