WIP major refactor: one factory per driver TimeseriesManager holds drivers and runtimes

--- a/packages/influxdb2-driver/composer.json
+++ b/packages/influxdb2-driver/composer.json
@@ -19,6 +19,8 @@
   },
   "extra": {
     "timeseries-php": {
+      "driver": "influxdb2",
+      "factory": "\\TimeseriesPhp\\Driver\\InfluxDB2\\InfluxFactory",
       "driver-class": "\\TimeseriesPhp\\Driver\\InfluxDB2\\InfluxDriver"
     }
   }
