--- a/packages/rrd-driver/composer.json
+++ b/packages/rrd-driver/composer.json
@@ -17,6 +17,8 @@
     },
     "extra": {
         "timeseries-php": {
+            "driver": "rrd",
+            "factory": "\\TimeseriesPhp\\Driver\\RRD\\RrdFactory",
             "driver-class": "\\TimeseriesPhp\\Driver\\RRD\\RrdDriver"
         }
     }
