refactor finished-ish

--- a/packages/influxdb2-driver/composer.json
+++ b/packages/influxdb2-driver/composer.json
@@ -20,8 +20,7 @@
   "extra": {
     "timeseries-php": {
       "driver": "influxdb2",
-      "factory": "\\TimeseriesPhp\\Driver\\InfluxDB2\\InfluxFactory",
-      "driver-class": "\\TimeseriesPhp\\Driver\\InfluxDB2\\InfluxDriver"
+      "factory": "\\TimeseriesPhp\\Driver\\InfluxDB2\\InfluxFactory"
     }
   }
 }
