--- a/packages/null-driver/composer.json
+++ b/packages/null-driver/composer.json
@@ -16,7 +16,8 @@
   },
   "extra": {
     "timeseries-php": {
-      "driver-class": "\\TimeseriesPhp\\Driver\\Null\\NullDriver"
+      "driver": "null",
+      "factory": "\\TimeseriesPhp\\Driver\\Null\\NullFactory"
     }
   }
 }
